docs: update Bolt's journal with new performance learnings, refactor `UnidadeFacade` coverage tests, and add coverage for `CopiaMapaService`.